# cmsi3801-pk-fall2024

./: .gitignore  README.md  __azurite_db_table__.json
c/: stack_test  string_stack.c
cpp/: stack.h  stack_test
go/: restaurant.go
haskell/: Exercises.hs  ExercisesTest.hs  haskell.cabal
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
java/: Exercises.java  ExercisesTest.java
javascript/: exercises.js
kotlin/: Exercises.kt  ExercisesTest.kt
lua/: exercises.lua
ocaml/: dune  exercises.ml
ocaml/_build/: .db  .digest-db  log
ocaml/_build/default/: exercises.ml  ocaml.dune-package
ocaml/_build/default/.dune/: configurator  configurator.v2
ocaml/_build/default/.exercises_test.eobjs/: dune__exe.ml-gen  dune__exe__Exercises.impl.d  dune__exe__Exercises_test.impl.all-deps  dune__exe__Exercises_test.impl.d  dune__exe__Exercises_test.intf.d
ocaml/_build/default/.exercises_test.eobjs/byte/: dune__exe.cmt  dune__exe__Exercises.cmt  dune__exe__Exercises_test.cmti
ocaml/_build/default/.merlin-conf/: exe-exercises_test
ocaml/_build/default/lib/: ocaml.cma  ocaml.cmxs
ocaml/_build/default/lib/.merlin-conf/: lib-ocaml
ocaml/_build/default/lib/.ocaml.objs/byte/: ocaml.cmt
ocaml/_build/default/test/.merlin-conf/: exe-test_ocaml
ocaml/_build/default/test/.test_ocaml.eobjs/byte/: dune__exe__Test_ocaml.cmti
python/: exercises.py
rust/stack/src/: lib.rs
swift/: exercises.swift
typescript/: exercises.ts  package.json  tsconfig.json
