cabal-version:      2.2
name:               haskell
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Patrick King
maintainer:         patrickgking03@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable ExercisesTest
    import:           warnings
    main-is:          ExercisesTest.hs
    other-modules:    Exercises
    build-depends:    base ^>=4.20.0.0,
                      containers,
                      text
    hs-source-dirs:   .
    default-language: Haskell2010
